--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
-sudo: required
-dist: bionic
+import:
+  - source: QubesOS/qubes-continuous-integration:R4.1/travis-base-r4.1.yml
+    mode: deep_merge_prepend
+  - source: QubesOS/qubes-continuous-integration:R4.1/travis-dom0-r4.1.yml
+python:
+  - '3.6'
 language: python
-python: '3.5'
-install: 
- - git clone https://github.com/QubesOS/qubes-builder ~/qubes-builder
- - pip install pylint
-env:
- - DIST_DOM0=fc25 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
-
+virtualenv:
+  system_site_packages: true
+install:
+  - sudo apt-get -y install python3-gi gir1.2-gtk-3.0
+  - pip3 install --quiet pylint
 script:
- - PYTHONPATH=test-packages python3 -m pylint qubesbridgedevice
- - ~/qubes-builder/scripts/travis-build
-
-branches:
-  except:
-    - /.*_.*/
+  - PYTHONPATH=test-packages python3 -m pylint qubesbridgedevice
+addons:
+  apt:
+    packages:
+      - debootstrap
